# pllm-ppi-data-leakage

./: .gitignore  404.html  README.md  index.html  mkdocs.yml  requirements.txt
autofigures/: index.html  pyproject.toml  requirements.txt
autofigures/autofigures/: .gitignore  __init__.py  __main__.py  acc_by_length.py  concordance.py  dataset.py  fc_net.py  get_scores.py  kw.py  length_heatmap.py  length_histogram.py  mutation.py  parse.py  sars_cov2.py  speed.py  strict_nonstrict.py  utils.py
autofigures/installation/: index.html
autofigures/usage/: index.html
data/: README.md  index.html  pllm-ppi-data-leakage.torrent
demo/: index.html
docs/: demo.md  glossary.md  index.md
docs/autofigures/: index.md  installation.md  usage.md
docs/data/: index.md
docs/experiments/: embedding_dbs.md  encode_llm.md  index.md  kw_bench.md  mutation_bench.md  ppi_bench.md  sars_bench.md  speed_bench.md
experiments/: index.html
experiments/embedding_dbs/: embed.py  embed.sh  embed_batch.py  fasta.py  index.html  requirements.txt  requirements_prose.txt  requirements_proteinbert.txt  requirements_rapppid.txt
experiments/encode_llm/: esmer.py  index.html  proser.py  proteinberter.py  prottrans_bert.py  prottrans_t5.py  rapppid.py  requirements.txt  squeezebert.py
experiments/kw_bench/: index.html  requirements.txt
experiments/mutation_bench/: bench.py  index.html  requirements.txt
experiments/ppi_bench/: dataset.py  fc_net.py  index.html  logger.py  requirements.txt  train.py  weightdrop.py
glossary/: index.html
search/: search_index.json
(+12 files in other folders)
