[project]
name = "autofigures"
version = "0.1.0"
description = "Programme which generates all the figures and some analyses for 'A serious flaw in the design of pLLM-based protein-protein interaction models'."
authors = [{ name = "Joseph Szymborski", email = "joseph.szymborski@mail.mcgill.ca" }]
requires-python = "~=3.10"
readme = "README.md"
dependencies = [
    "torch>=2.4.1,<3",
    "lightning>=2.4.0,<3",
    "scikit-learn>=1.5.2,<2",
    "numpy>=2.1.1,<3",
    "pandas>=2.2.3,<3",
    "fire>=0.7.0,<0.8",
    "tqdm>=4.66.5,<5",
    "matplotlib>=3.9.2,<4",
    "lmdb>=1.5.1,<2",
    "tables>=3.10.1,<4",
    "upsetplot>=0.9.0,<0.10",
    "seaborn>=0.13.2,<0.14",
    "mpl-scatter-density>=0.7,<0.8",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
